forth/test/fail/test_redefine_missing_marker.af
\ Must fail to compile: redefinition needs `[ .redefine ]`.
fun: .test_redefine_missing_marker_word { -- out } 1 end
fun: .test_redefine_missing_marker_word { -- out } 2 end
